objects/TQ_Country_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TQ_Country__c</fullName>
        <inlineHelpText>Country name of the Bidding Unit which is used to get default template name based on the Quotation Bidding Unit country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TQ_Default_Email_Template_Folder__c</fullName>
        <inlineHelpText>This is used to get the default folder name on the &quot;Select Template&quot; page based on the quotation bidding unit country</inlineHelpText>
        <label>Default Email Template Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TQ_Default_Email_Template__c</fullName>
        <inlineHelpText>This Template is defaulted to the &quot;Submit To Customer&quot; page based on the quotation bidding unit</inlineHelpText>
        <label>Default Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TQ Country Settings</label>
</CustomObject>